# tomboone-dot-com-backend

./: .deployment  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 1e2d209b92bd_remove_title_from_projects.py  1f908f249595_initial_migration.py  ab32183461b1_initial_migration.py
app/: __init__.py  config.py  dependencies.py  main.py
app/auth/: __init__.py  azure_ad.py  dependencies.py
app/db/: __init__.py  database.py
app/models/: __init__.py  consulting_work.py  education.py  profile.py  project.py  work_experience.py
app/repositories/: __init__.py  base.py  consulting_work.py  education.py  profile.py  project.py  work_experience.py
app/routers/: __init__.py  profile.py
app/services/: __init__.py  profile.py
certs/: mysql-ca-bundle.pem
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
